--- a/CJBShowItemSellPrice/i18n/es.json
+++ b/CJBShowItemSellPrice/i18n/es.json
@@ -1,4 +1,4 @@
 {
-  "labels.single-price": "Una unidad",
-  "labels.stack-price": "Montón"
+  "labels.single-price": "Unidad",
+  "labels.stack-price": "Conjunto"
 }
